[gd_scene load_steps=4 format=3 uid="uid://nbloh3v2ad7p"]

[ext_resource type="Script" path="res://Scripts/host_screen.gd" id="1_sslsd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jusg4"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hecct"]
font_size = 22
font_color = Color(0.00184107, 0.00184107, 0.00184107, 1)

[node name="HostScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(426, 512)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_sslsd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 573.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jusg4")
metadata/_edit_lock_ = true

[node name="ServerName" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -76.0
offset_right = 202.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
placeholder_text = "Server Name"
alignment = 1
max_length = 15

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -168.0
offset_right = 164.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="Back" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "BACK"

[node name="Create" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "CREATE "

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -204.0
offset_right = 141.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="Categories" type="GridContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -56.0
offset_right = -71.5
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
columns = 3

[node name="Category1" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category2" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category3" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category4" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category5" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category6" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category7" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category8" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="Category9" type="LineEdit" parent="Settings/Categories"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
max_length = 12

[node name="PlayerSlider" type="HSlider" parent="Settings"]
layout_mode = 2
offset_left = 373.333
offset_top = 75.0
offset_right = 500.333
offset_bottom = 91.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 3.0
max_value = 9.0
value = 3.0
ticks_on_borders = true

[node name="PlayerAmount" type="Label" parent="Settings"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
offset_left = 410.667
offset_top = 42.6667
offset_right = 517.667
offset_bottom = 74.6667
text = "Players: 3"
label_settings = SubResource("LabelSettings_hecct")

[node name="CategoriesLabel" type="Label" parent="Settings"]
self_modulate = Color(0, 0, 0, 1)
offset_left = 101.333
offset_top = 42.6667
offset_right = 220.333
offset_bottom = 74.6667
text = "Categories:"
label_settings = SubResource("LabelSettings_hecct")

[connection signal="pressed" from="Buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Buttons/Create" to="." method="_on_create_pressed"]
[connection signal="value_changed" from="Settings/PlayerSlider" to="." method="_on_player_amount_value_changed"]
